<resources>
    <string name="app_name">WorkApp</string>

    <!-- Navigation drawer element -->
    <string name="workout">Workout</string>
    <string name="exercises">Exercises</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>

    <!-- Activity title -->
    <string name="exercise_list">Exercises</string>
    <string name="exercise_detail">Exercise detail</string>
    <string name="start_exercise">Start exercise</string>
    <string name="account_summary">Account summary</string>
    <string name="sign_in">Sign in</string>
    <string name="workouts">Workouts</string>
    <string name="workout_detail">Workout detail</string>

    <!-- Workout menu -->
    <string name="action_change_workout">Change</string>
    <string name="action_history_workouts">History</string>
    <string name="action_refresh">Refresh</string>

    <!-- Session Card -->
    <string name="session_right_button">Start</string>
    <string name="session_left_button">Details</string>
    <string name="start_now_button">Start now</string>
    <string name="details_button">Details</string>
    <string name="exercises_title">Exercises</string>
    <string name="duration_title">Duration</string>
    <string name="completion_title">Completion</string>

    <!-- Empty Views -->
    <string name="no_workouts">There are no workouts here for you, add or create one!</string>
    <string name="no_exercises">There are no exercises here for you, download from the web!</string>
    <string name="no_logged">Yor are not logged in yet</string>

    <!-- Exercise Row -->
    <string name="exercise">Exercise</string>

    <!-- Exercise List-->
    <string name="snackbar_JSON_success">Exercises successfully updated!</string>

    <!-- Settings -->
    <string name="sound_preference_category">Sound</string>

    <string name="switch_preference_sound">Enable sounds in the app</string>
    <string name="switch_sound_preference_key">switch_sound_key</string>
    <string name="sound_preference_on">Audio enabled</string>
    <string name="sound_preference_off">Audio disabled</string>

    <string name="voice_preference_checkbox">Voice</string>
    <string name="voice_preference_key">voice_key</string>
    <string name="voice_preference_summary_on">Voice is now enabled, you will listen a voice that help you during the exercises</string>
    <string name="voice_preference_summary_off">Voice is now disabled</string>

    <string name="sound_preference_checkbox">Sound</string>
    <string name="sound_preference_key">sound_key</string>
    <string name="sound_preference_summary_on">Sound is now enabled, you will listen metronome during the exercises</string>
    <string name="sound_preference_summary_off">Sound is now disabled</string>

    <!-- Account strings -->
    <string name="account_add_title">Add</string>
    <string name="account_kg">kg</string>
    <string name="account_add_content">Add a new entry</string>
    <string name="account_add_hint">Your new weight here</string>
    <string name="account_trend">Your weight history trend</string>
    <string name="account_male">male</string>
    <string name="account_female">female</string>
    <string name="account_other">other</string>
    <string name="account_registered">registered</string>
    <string name="account_unknown_birth">age unknown</string>
    <string name="account_weight_error">You can insert your weight only once per day, please retry tomorrow!</string>
    <string name="submit">Submit</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <!-- About Activity -->
    <string name="text_about">WorkApp has been developed by a group of students from the University of Rome, Tor Vergata.\n\n It is a Mobile Programming project aiming to help athlets during daily workouts, allowing interaction via web with their trainers.</string>
    <string name="text_dev">Meet our developers</string>
    <!-- Feedback Activity -->
    <string name="feedback_leavefeedback">Please write a feedback</string>
    <string name="feedback_0star">Set rating</string>
    <string name="feedback_1star">Bad</string>
    <string name="feedback_2star">Not so bad</string>
    <string name="feedback_3star">Normal</string>
    <string name="feedback_4star">Good</string>
    <string name="feedback_5star">Excellent</string>
    <string name="feedback_comment">Please write a comment</string>
    <string name="feedback_commentForm">Write your comment here</string>
    <string name="feedback_submitButton">Submit</string>
    <string name="feedback_title">Leave feedback</string>
    <string name="feedback_submit_exercise">Thanks for your feedback!</string>
    <string name="feedback_submit_session_button">Press and hold to leave a feedback</string>

    <!-- Start Exercise Activity -->
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="repetition">Repetition</string>
    <string name="series">Series</string>
    <string name="complete">Complete!</string>
    <string name="internal_error">Oooops: internal error occurred!</string>

    <!-- SignIn Activity -->
    <string name="sign_in_no_service">Your GooglePlay Services are missing or disabled.</string>
    <string name="signin_error">Cannot sign in to your account, please check your connection or try later.</string>
    <string name="signin">Access with your Google account to personalize and view statistics of your training.</string>
    <string name="exercise_detail_description_intro">Exercise structure:</string>
    <string name="exercise_detail_description_series"> series of </string>
    <string name="exercise_detail_description_with"> with </string>
    <string name="exercise_detail_description_recrate">second of recovery, at a rate of</string>
    <string name="exercise_detail_skip">Next exercise</string>
    <string name="exercise_detail_skip_finish">Give us a feedback</string>
    <string name="title_workout_list">Workout</string>
    <string name="title_workout_detail">Workout Detail</string>
    <string name="action_new">Create new</string>
    <string name="action_select">Select workout</string>
    <string name="title_activity_do_exercise">DoExerciseActivity</string>
    <string name="development">Are you a developer?</string>
    <string name="no_connection">Error occurred while downloading, are you connected to the network?</string>

    <string name="workout_description_default_intro">In the session of $</string>
    <string name="workout_description_intro_1">$Tomorrow$ we will work on $</string>
    <string name="workout_description_intro_2">$The day after tomorrow$ we will work on $</string>
    <string name="workout_description_intro_work">$ we will work on $</string>
    <string name="workout_description_and">and</string>
    <string name="workout_description_indetails">In details:</string>
    <string name="action_chronology">Chronology</string>
    <string name="title_activity_workout_create">Create workout</string>

    <!--<string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>-->
    <string name="text_insert_name">Insert workout name</string>
    <string name="text_insert_difficulty">Select difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="add_session">+ Add session</string>
    <string name="title_activity_execises_list_activity_checkbox">Select exercises</string>
    <string name="exercises_text_button">SELECT EXERCISES</string>
    <string name="date_text_button">SELECT DATE</string>
    <string name="repetitions_title">Repetition</string>
    <string name="attention">Attention</string>
    <string name="action_settings">Settings</string>
    <string name="msg_date">Please select another date</string>
    <string name="feedback_submit_session">Thanks for your feedback!</string>
    <string name="hello_world">Hello World</string>
    <string name="msg_date_2">Please set date for all session</string>
    <string name="exercise_done">DONE</string>
    <string name="exercise_not_yet">NOT YET</string>
    <string name="msg_date3">You cannot insert date that is previous to today.</string>

</resources>
