<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="it.mobileprogramming.ragnarok.workapp.WorkoutFragment">

    <it.mobileprogramming.ragnarok.workapp.util.MyMaterialListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:column_count_portrait="1"
        app:column_count_landscape="2"
        android:id="@+id/workout_list_view"
        android:paddingBottom="@dimen/small_padding"
        android:paddingTop="@dimen/small_padding"
        android:clipToPadding="false"
        android:clipChildren="false" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fab_addButtonColorNormal="@color/accent"
        app:fab_addButtonColorPressed="@color/accent_dark"
        app:fab_addButtonPlusIconColor="@android:color/white"
        app:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">


        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/primary"
            app:fab_title="@string/action_new"
            app:fab_colorPressed="@color/accent_dark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/primary"
            app:fab_title="@string/action_select"
            app:fab_colorPressed="@color/accent_dark"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_chronology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/primary"
            app:fab_title="@string/action_chronology"
            app:fab_colorPressed="@color/accent_dark"/>


    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/no_workout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_padding"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/no_workouts"
            android:drawableTop="@drawable/ic_logo_colored"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:textColor="@color/secondary_text"
            android:gravity="center"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</FrameLayout>
