<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    tools:context="it.mobileprogramming.ragnarok.workapp.StartExerciseActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <at.grabner.circleprogress.CircleProgressView
        android:id="@+id/circleView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:gravity="center"
        CircleProgressView:barColor="@color/accent"
        CircleProgressView:barWidth="12dp"
        CircleProgressView:contourSize="0dp"
        CircleProgressView:rimWidth="20dp"
        CircleProgressView:seekMode="true"
        CircleProgressView:textColor="@color/accent"
        CircleProgressView:unit=""
        CircleProgressView:unitColor="@color/accent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_repetition"
        android:gravity="center_horizontal"
        android:layout_above="@+id/linear_layout_image_pause"
        android:layout_alignLeft="@id/circleView"
        android:layout_alignStart="@id/circleView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition"
            style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 "
                android:id="@+id/currentRepTV"
                style="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/ 20"
                android:id="@+id/totalRepTV"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_series"
        android:gravity="center_horizontal"
        android:layout_above="@+id/linear_layout_image_stop"
        android:layout_alignRight="@+id/circleView"
        android:layout_alignEnd="@+id/circleView">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/series"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding">

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 "
                android:id="@+id/currentSeriesTV"
                android:textColor="@android:color/white" />

            <TextView
                style="@style/TextAppearance.AppCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/ 20"
                android:textStyle="bold"
                android:id="@+id/totalSeriesTV"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        tools:text="00:30:123"
        android:id="@+id/remaining_text_view"
        android:textColor="@android:color/white"
        android:layout_above="@+id/linear_layout_repetition"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear_layout_repetition"
        android:layout_alignStart="@+id/linear_layout_repetition"
        android:layout_alignRight="@+id/linear_layout_repetition"
        android:layout_alignEnd="@+id/linear_layout_repetition"
        android:id="@+id/linear_layout_image_pause"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pause_image_view"
            android:src="@drawable/ic_action_pause"
            android:tag="@string/pause"
            android:contentDescription="@string/pause" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout_image_stop"
        android:gravity="center"
        android:layout_alignRight="@id/circleView"
        android:layout_alignEnd="@id/circleView"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/linear_layout_series"
        android:layout_alignStart="@+id/linear_layout_series">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stop_image_view"
            android:src="@drawable/ic_action_stop"
            android:tag="@string/stop"
            android:contentDescription="@string/stop" />

    </LinearLayout>

</RelativeLayout>
